# COLA

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  COLA.cc  COLA.hh  LICENSE  LorentzVector.cc  LorentzVector.hh  README.md  main.cc
.github/workflows/: ci.yml
Converters/: ExConverter.cc  ExConverter.hh  VConverter.cc  VConverter.hh
Factories/: ExConvFac.hh  ExGenFac.hh  ExWriterFac.hh  VFactory.hh
Generators/: ExGenerator.cc  ExGenerator.hh  VGenerator.cc  VGenerator.hh
Management/: ColaRunManager.cc  ColaRunManager.hh  EventData.hh  FactoryCreator.hh  RunManager.cc  RunManager.hh  VFactory.hh  VFilter.hh
Writers/: ExWriter.cc  ExWriter.hh  VWriter.cc  VWriter.hh
api/: COLA.hh
cmake/: COLAQualityTools.cmake  SetupCodeQuality.cmake
data/: COLAConfig.cmake.in  COLAlibConfig.cmake.in  config.sh
docs/: Doxyfile  main.md
include/: COLA.hh
tests/: CMakeLists.txt  lorentz.cc  lorentz.cpp
tinyxml2/: CMakeLists.txt  modifications.txt
